--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usama Mangi | MERN Stack Dev</title>
-  <link rel="stylesheet" crossorigin href="./chunk-jsgh0xbx.css"><script type="module" crossorigin src="./chunk-kn00yv8c.js"></script></head>
+  <link rel="stylesheet" crossorigin href="./chunk-cw0839wr.css"><script type="module" crossorigin src="./chunk-erxerp36.js"></script></head>
   <body>
     <div id="root"></div>
     
