--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usama Mangi | MERN Stack Dev</title>
-  <link rel="stylesheet" crossorigin href="./chunk-90mnff16.css"><script type="module" crossorigin src="./chunk-a225hcba.js"></script></head>
+  <link rel="stylesheet" crossorigin href="./chunk-wazq72qm.css"><script type="module" crossorigin src="./chunk-q166y8p6.js"></script></head>
   <body>
     <div id="root"></div>
     
