--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Usama Mangi | MERN Stack Dev</title>
-  <link rel="stylesheet" crossorigin href="./chunk-qcnzx5xg.css"><script type="module" crossorigin src="./chunk-352h6nmh.js"></script></head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Usama Mangi | MERN Stack Dev</title>
+        <meta
+            name="description"
+            content="Portfolio of Usama Mangi, a MERN Stack Developer"
+        />
+        <meta
+            name="keywords"
+            content="Usama Mangi, MERN Stack Developer, Bun.js, React, React Native, Portfolio, Web Developer, Full Stack Developer"
+        />
+        <meta name="author" content="Usama Mangi" />
+        <meta name="robots" content="index, follow" />
+        <link rel="icon" type="image/x-icon" href="./favicon-myr40jyw.png" />
+    <link rel="stylesheet" crossorigin href="./chunk-qcnzx5xg.css"><script type="module" crossorigin src="./chunk-352h6nmh.js"></script></head>
+    <body>
+        <div id="root"></div>
+        
+    </body>
 </html>
